bug fix
horizontal scroll removed from mobile devices.

--- a/fylo-dark-theme-landing-page-master/css/style.comp.css
+++ b/fylo-dark-theme-landing-page-master/css/style.comp.css
@@ -29,27 +29,48 @@ body {
   grid-column: full-start / full-end;
   display: flex;
   flex-direction: row;
-  padding: 2rem;
+  padding: 3rem 2rem 2.5rem 2rem;
   margin-bottom: 5rem;
   color: #fff;
   background-color: #1c2431; }
+  @media only screen and (max-width: 18.75em) {
+    .header {
+      display: flex;
+      flex-direction: column; } }
 
 .header-logo {
   margin-right: auto;
   align-self: center; }
+  @media only screen and (max-width: 25em) {
+    .header-logo {
+      margin-bottom: 1rem; } }
 
 .header-list ul {
   display: flex;
   flex-direction: row;
   align-items: center; }
+  @media only screen and (max-width: 25em) {
+    .header-list ul {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start; } }
 
 .header-list li {
   list-style: none; }
+  @media only screen and (max-width: 25em) {
+    .header-list li {
+      margin-bottom: .3rem; } }
   @media only screen and (max-width: 37.5em) {
     .header-list li {
       font-size: .8rem; } }
   .header-list li:not(:last-child) {
     margin-right: 2vw; }
+
+.header-list ul li a {
+  text-decoration: none;
+  color: white; }
+  .header-list ul li a:hover {
+    color: aqua; }
 
 .footer {
   grid-row: 7 / 8;
@@ -182,13 +203,15 @@ body {
   color: #fff;
   background-image: linear-gradient(to right, #65e2d9, #339ecc);
   font-family: font-primary; }
+  .btn:hover {
+    background-image: linear-gradient(to right, rgba(0, 128, 0, 0.5), rgba(0, 0, 255, 0.5)); }
 
 .components {
   grid-row: 3 / 4;
   grid-column: center-start / center-end;
   margin: 4rem 0;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(10rem, 27rem));
+  grid-template-columns: repeat(auto-fit, minmax(8rem, 27rem));
   grid-column-gap: 7rem;
   grid-row-gap: 6rem;
   align-items: baseline;
@@ -231,20 +254,34 @@ body {
     align-items: center;
     justify-content: space-between; */
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(24rem, 1fr));
+  grid-template-columns: repeat(2, 1fr);
   grid-template-rows: auto;
   align-items: center;
   justify-items: center;
   grid-column-gap: 1rem; }
+  @media only screen and (max-width: 43.75em) {
+    .about {
+      display: grid;
+      grid-template-columns: minmax(min-content, 1fr);
+      grid-template-rows: auto;
+      align-items: center;
+      justify-items: center;
+      grid-column-gap: 1rem; } }
 
 .about-img__p {
   max-width: 100%; }
+  @media only screen and (max-width: 43.75em) {
+    .about-img__p {
+      max-width: 90%; } }
 
 .about-typo {
   padding: 2.5rem; }
   .about-typo__heading {
     font-size: 2.5rem;
     margin-bottom: 1.5rem; }
+    @media only screen and (max-width: 43.75em) {
+      .about-typo__heading {
+        font-size: 1.6rem; } }
   .about-typo__text {
     font-family: sans-serif;
     max-width: 35rem;
@@ -258,12 +295,14 @@ body {
   display: flex;
   flex-direction: row;
   padding-bottom: .2rem;
-  width: 10.5rem;
+  width: 10.4rem;
   border-bottom: 1px solid #62E0D9;
   justify-content: space-between; }
   .about-link__text {
-    font-family: sans-serif;
-    color: #62E0D9; }
+    font-family: sans-serif; }
+    .about-link__text a {
+      text-decoration: none;
+      color: #62E0D9; }
   .about-link__pointer {
     max-width: 100%; }
 
@@ -276,7 +315,7 @@ body {
   background-repeat: no-repeat;
   background-position: 3.4rem .1rem;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(19rem, 24rem));
+  grid-template-columns: repeat(auto-fit, minmax(10rem, 24rem));
   grid-template-rows: auto;
   grid-column-gap: 2rem;
   grid-row-gap: 2rem;
@@ -315,7 +354,7 @@ body {
 
 .form {
   grid-row: 6 / 7;
-  grid-column: center-start / center-end;
+  grid-column: full-start / full-end;
   margin: 4rem 0;
   padding: 0 3rem;
   display: grid;
@@ -333,6 +372,9 @@ body {
   grid-template-rows: auto;
   justify-items: center;
   z-index: 2; }
+  @media only screen and (max-width: 37.5em) {
+    .sign-up {
+      padding: 2rem 2rem; } }
   .sign-up__heading {
     font-size: 1.7rem;
     margin-bottom: 1.5rem;
@@ -355,6 +397,9 @@ input[type=text] {
     input[type=text] {
       width: 100%;
       margin-bottom: 2rem; } }
+  @media only screen and (max-width: 25em) {
+    input[type=text] {
+      padding: .5rem 1rem; } }
 
 input[type=submit] {
   padding: 1rem 1.5rem;
@@ -369,3 +414,6 @@ input[type=submit] {
   @media only screen and (max-width: 37.5em) {
     input[type=submit] {
       width: 100%; } }
+  @media only screen and (max-width: 25em) {
+    input[type=submit] {
+      padding: .5rem 1rem; } }
