--- a/fylo-dark-theme-landing-page-master/sass/_base.scss
+++ b/fylo-dark-theme-landing-page-master/sass/_base.scss
@@ -24,6 +24,8 @@ $bp-medium:43.75em; //700px
 $bp-large:56.25em; //900px
 $bp-larger:62.5em; //1000px
 $bp-small:37.5em; //600px
+$bp-smaller:25em; //400px
+$bp-smallest:18.75em; //300px
 
 *,
 *::after,
