--- a/fylo-dark-theme-landing-page-master/sass/_features.scss
+++ b/fylo-dark-theme-landing-page-master/sass/_features.scss
@@ -58,6 +58,10 @@
     color: #fff;
     background-image: linear-gradient(to right, $color-lighter-blue, $color-light-blue);
     font-family: font-primary;
+
+    &:hover {
+        background-image: linear-gradient(to right,rgba(green,.5),rgba(blue,.5));
+    }
 }
 
 
@@ -68,7 +72,7 @@
     margin: 4rem 0;
 
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(10rem, 27rem));
+    grid-template-columns: repeat(auto-fit,minmax(8rem, 27rem));
     grid-column-gap: 7rem;
     grid-row-gap: 6rem;
     align-items: baseline;
@@ -121,17 +125,29 @@
     justify-content: space-between; */
 
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(24rem,1fr));
+    grid-template-columns:  repeat(2,1fr);
     grid-template-rows: auto;
     align-items: center;
     justify-items: center;
     grid-column-gap: 1rem;
+
+    @media only screen and (max-width:$bp-medium) {
+    display: grid;
+    grid-template-columns: minmax(min-content, 1fr);
+    grid-template-rows: auto;
+    align-items: center;
+    justify-items: center;
+    grid-column-gap: 1rem;
+    }
 }
 
 .about-img {
 
     &__p {
         max-width: 100%;
+        @media only screen and (max-width:$bp-medium) {
+            max-width: 90%;
+            }
     }
 }
 
@@ -141,6 +157,10 @@
     &__heading {
         font-size: 2.5rem;
         margin-bottom: 1.5rem;
+
+        @media only screen and (max-width:$bp-medium) {
+            font-size:1.6rem;
+            }
     }
 
     &__text {
@@ -160,13 +180,17 @@
     display: flex;
     flex-direction: row;
     padding-bottom: .2rem;
-    width: 10.5rem;
+    width: 10.4rem;
     border-bottom: 1px solid #62E0D9;
     justify-content: space-between;
 
     &__text {
         font-family: sans-serif;
-        color: #62E0D9;
+
+        & a {
+            text-decoration: none;
+            color: #62E0D9;
+        }
     }
 
     &__pointer {
@@ -185,7 +209,7 @@
     background-position: 3.4rem .1rem;
 
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(19rem, 24rem));
+    grid-template-columns: repeat(auto-fit,minmax(10rem, 24rem));
     grid-template-rows: auto;
     grid-column-gap: 2rem;
     grid-row-gap: 2rem;
@@ -244,7 +268,7 @@
 //SIGN-UP 
 .form {
     grid-row: 6 / 7;
-    grid-column: center-start / center-end;
+    grid-column: full-start / full-end;
     margin: 4rem 0;
     padding: 0 3rem;
 
@@ -265,6 +289,10 @@
     grid-template-rows: auto;
     justify-items: center;
     z-index: 2;
+
+    @media only screen and (max-width:$bp-small) {
+        padding: 2rem 2rem;
+    }
 
     &__heading {
         font-size: 1.7rem;
@@ -295,6 +323,11 @@ input[type=text] {
         width: 100%;
         margin-bottom: 2rem;
     } 
+
+    @media only screen and (max-width:$bp-smaller) {
+        padding: .5rem 1rem;
+        
+    }
 }
 
 input[type=submit] {
@@ -311,5 +344,9 @@ input[type=submit] {
 
     @media only screen and (max-width:$bp-small) {
         width: 100%;
+    }
+
+    @media only screen and (max-width:$bp-smaller) {
+        padding: .5rem 1rem;
     }
 }
